--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.8",
+    "@types/firebase": "^3.2.1",
+    "firebase": "^8.0.2",
+    "firebase-admin": "^9.4.1",
     "framer-motion": "^2.9.4",
     "next": "10.0.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-hook-form": "^6.11.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
