--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ FIREBASE_STORAGE_BUCKET="react-map-71195.appspot.com"
 FIREBASE_MESSAGING_SENDER_ID="328506259649"
 FIREBASE_APP_ID="1:328506259649:web:ce0e1b4896a94fddfdbc40"
 FIREBASE_MEASUREMENT_ID="G-15GB1B9KCK"
-ENCRYPTION_KEY="secretossecretos"
-ENCRYPTION_IV="unsecretosecreto"
+ENCRYPTION_KEY="unsecretosecreto"
+ENCRYPTION_IV="secretossecretos"
+ENV="development"
