--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
   ],
   "plugins": ["react", "@typescript-eslint", "prettier", "import"],
   "rules": {
+    "react/display-name": "off",
     "no-console": "warn",
     "no-unused-vars": [
       "warn",
