--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.8",
+    "@types/axios": "^0.14.0",
     "@types/firebase": "^3.2.1",
+    "axios": "^0.21.0",
     "firebase": "^8.0.2",
     "firebase-admin": "^9.4.1",
     "framer-motion": "^2.9.4",
