--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/axios": "^0.14.0",
     "@types/firebase": "^3.2.1",
     "axios": "^0.21.0",
+    "crypto": "^1.0.1",
     "date-fns": "^2.16.1",
     "firebase": "^8.0.2",
     "firebase-admin": "^9.4.1",
